PSR-4 namespace added
Because that isn't part of the interactive Composer setup.

--- a/composer.json
+++ b/composer.json
@@ -14,5 +14,10 @@
             "name": "PaulJulio",
             "email": "paulhulett@gmail.com"
         }
-    ]
+    ],
+    "autoload": {
+        "psr-4": {
+            "PaulJulio\\PhpOnLambda\\": "src"
+        }
+    }
 }
