Milestone: remote machine stood up with git repo
Most basic definition of "working" achived as the remote machine can be brought up with the git repo installed. Proof of concept that remote commands can be executed.

Settings files updated
Terrible utility file needs a lot of work now that the most basic functions have been proven

--- a/composer.json
+++ b/composer.json
@@ -2,8 +2,9 @@
     "name": "pauljulio/php-composer-on-aws-lambda",
     "description": "Run your Application on AWS Lambda",
     "require": {
-        "aws/aws-sdk-php": "^3.15",
-        "pauljulio/php-settings-ini": "1.*"
+        "aws/aws-sdk-php": "^3.15"
+        , "pauljulio/php-settings-ini": "1.*"
+        , "phpseclib/phpseclib": "2.*"
     },
     "require-dev": {
         "phpunit/phpunit": "^5.2"
